# agent-q

./: .gitignore  README.md  browser.sh  chrome.txt  eval.jsonl  gemma.py  merge_lora_to_fp16.py  models.py  pyproject.toml  test.py  test.py.bak  test2.py  test3.py  test_ollama.py  test_train.py  test_xlam.py  train.jsonl  train.py  train_bak.py
agentq/core/agent/: agentq_actor.py  agentq_critic.py  base.py  base.py.bak  base.py.origin  base_local.py  base_vision.py  vision_agent.py
agentq/core/mcts/: base.py  browser_mcts.py  grid.py  mcts.py  train.py
agentq/core/mcts/core/: mcts.py
agentq/core/models/: models.py
agentq/core/orchestrator/: orchestrator.py
agentq/core/prompts/: prompts.py
agentq/core/skills/: click_using_selector.py  enter_text_and_click.py  enter_text_using_selector.py  get_screenshot.py
agentq/core/web_driver/: playwright.py
agentq/user_preferences/: user_preferences.txt
agentq/utils/: stream_to_file.py
