[project]
name = "agent-q"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "aiohttp>=3.12.15",
    "bitsandbytes>=0.48.1",
    "boto3>=1.40.29",
    "colorama>=0.4.6",
    "datasets>=4.1.1",
    "langsmith>=0.4.27",
    "litellm>=1.77.0",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "openai>=1.107.1",
    "outlines>=1.2.7",
    "pdfplumber>=0.11.7",
    "peft>=0.17.1",
    "playwright-stealth>=2.0.0",
    "pydantic>=2.11.7",
    "pytest-playwright>=0.7.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "ruff>=0.13.0",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "termcolor>=3.1.0",
    "tiktoken>=0.11.0",
    "transformers>=4.56.2",
    "trl>=0.23.0",
    "typing-extensions>=4.15.0",
    "unsloth>=2025.10.1",
]
